<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Marn Task</string>
    <string name="main_navigation_fragment">main navigation fragment</string>
    <string name="splash_logo">splash_logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">description</string>
    <string name="category_name">Category Name</string>
    <string name="category_image">Category Image</string>
    <string name="share">Share</string>
    <string name="device_doesn_t_support_bluetooth">Device doesn\'t support Bluetooth</string>
    <string name="bluetooth_is_not_enabled">Bluetooth is not enabled</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="connect">Connect</string>
</resources>