<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.marn.task.presentation.share.ClickHandler" />


        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@color/bar_color"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:onClick="@{() -> handler.onBack()}"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_otp_code"
                style="@style/TitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">




                <Button
                    android:id="@+id/btn_connect"
                    style="@style/ButtonStyleWhite"
                    android:onClick="@{() -> handler.onConnect()}"
                    android:text="@string/connect"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btn_send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <Button
                    android:id="@+id/btn_send"
                    style="@style/ButtonStyleWhite"
                    android:onClick="@{() -> handler.onSend()}"
                    android:text="@string/send"
                    app:layout_constraintTop_toBottomOf="@id/btn_connect"
                    app:layout_constraintBottom_toTopOf="@id/btn_receive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <Button
                    android:id="@+id/btn_receive"
                    style="@style/ButtonStyleWhite"
                    android:onClick="@{() -> handler.onReceive()}"
                    android:text="@string/receive"
                    app:layout_constraintTop_toBottomOf="@id/btn_send"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
